@@ -36,5 +36,6 @@
 #undef MIN
 #endif
 #define TWOPIOVER360 0.0174533
+#define PI 3.141592654
 
 #endif				/* MYMATH_H */
